k8s/mailrise/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailrise
  labels:
    name: mailrise
