k8s/mailrise/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailrise-service
  namespace: mailrise

spec:
  ports:
    - name: smtps
      protocol: TCP
      port: 465 
      targetPort: 8025
  selector:
    app: mailrise
