k8s/mailrise/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingress
  namespace: mailrise

spec:
  entryPoints:
    - smtps 
  routes:
  - match: HostSNI(`*`)
    services:
    - name: mailrise-service
      port: smtps
  tls: {}
